klipper/historymodel.cpp
@@ -125,29 +125,31 @@ void HistoryModel::insert(QSharedPointer<HistoryItem> item)
     if (item.isNull()) {
         return;
     }
-    const QModelIndex existingItem = indexOf(item.data());
+
+    if (m_maxSize == 0) {
+        // special case - cannot insert any items
+        return;
+    }
+
+    QMutexLocker lock(&m_mutex);
+
+    const QModelIndex existingItem = indexOf(item.get());
     if (existingItem.isValid()) {
         // move to top
         moveToTop(existingItem.row());
         return;
     }
 
-    QMutexLocker lock(&m_mutex);
-    if (m_items.count() == m_maxSize) {
-        // remove last item
-        if (m_maxSize == 0) {
-            // special case - cannot insert any items
-            return;
-        }
-        beginRemoveRows(QModelIndex(), m_items.count() - 1, m_items.count() - 1);
-        m_items.removeLast();
-        endRemoveRows();
-    }
-
     beginInsertRows(QModelIndex(), 0, 0);
     item->setModel(this);
     m_items.prepend(item);
     endInsertRows();
+
+    if (m_items.count() > m_maxSize) {
+        beginRemoveRows(QModelIndex(), m_items.count() - 1, m_items.count() - 1);
+        m_items.removeLast();
+        endRemoveRows();
+    }
 }
 
 void HistoryModel::clearAndBatchInsert(const QVector<HistoryItemPtr> &items)
